hive-macro/tests/macro/should_fail/function_argument_self.rs
#[hive_macro::hive_test]
fn test_function(self, handle: String, info: String) {}

fn main() {}
